[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repokit-backup"
version = "0.1"
dependencies = [
  "requests",
  "repokit-common",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff>=0.6",
  "uv",
]
[project.scripts]
backup = "repokit_backup.cli:main"
repokit-backup = "repokit_backup.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
where = ["src"]
